--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 baseURL = "https://kims-blog.netlify.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Kim's Blog"
 theme = "rusty"
 
-
-
+[params]
+    github_username = "KimLizCass"
+    description = "Adventures of a female programmer"
