--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kims-blog.netlify.com/"
+baseURL = "https://kimlizcass.net/"
 languageCode = "en-us"
 title = "Kim's Blog"
 theme = "rusty"
